# Vibe-Prolog

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRANCH_COMPARISON.md  CODE_DOCS.md  FEATURES.md  OPERATOR_FIXES_SUMMARY.md  OPERATOR_FUTURE_WORK.md  OPERATOR_IMPLEMENTATION_STATUS.md  README.md  main.py  pyproject.toml  test_unicode_quick.py  vibeprolog.py
.gemini/: styleguide.md
.paige/: CACHED_GOALS.md  STATUS.md  currentissuelist.json  library_test_progress.json  priorities.json  status-board.json
ai-tools/: README.md  fix-issue-with-kilocode.sh  markdown_timelapse.sh  pyproject.toml
ai-tools/autocoder_utils/: README.md  __init__.py  address_pr_comments.py  change_tracker.py  cli.py  gh_pr_helper.py  issue_workflow.py
ai-tools/change-tracker/: generate-changelog.py
ai-tools/claude/: fix-issue-with-claude
ai-tools/kilocode/: README.md  address-pr-comments-with-kilocode  fix-issue-with-claude  fix-issue-with-kilocode  pyproject.toml
ai-tools/kilocode/change-tracker/: generate-changelog.py
ai-tools/kilocode/kilocode_autocoder_utils/: __init__.py
ai-tools/tests/: test_gh_pr_helper.py  test_issue_workflow_branch_logic.py
compliance/: ISO-COMPLIANCE-REPORT.md  README.md  iso-conformity-tests-standalone.pl  iso-tests-simple.pl  test-cleanup-guarantees.pl
docs/: ARCHITECTURE.md  COMPATIBILITY_TEST_REPORT.md  CONFORMITY_TESTING.md  FEATURES.md  GRAMMAR_COMPARISON.md  LIBRARY_STATUS.md  REFACTORING_SUMMARY.md  SYNTAX_NOTES.md  UNICODE_IMPLEMENTATION.md  WORKFLOW.md  cached_xpath_library_load_times.csv  uncached_xpath_library_load_times.csv
examples/: README.md  birds.pl  cuttutorial.pl  dcg_examples.pl  examples.pl
prolog/: __init__.py  engine.py  errors.py  exceptions.py  interpreter.py  parser.py  terms.py  unification.py
tests/: README.md  README_SWI_COMPATIBILITY.md  __init__.py  conftest.py  minimal_mi_test.pl  read_terms.pl  test_abolish.py  test_additional_builtins.py  test_additional_coverage.py  test_append.py  test_argv.py  test_arithmetic.py  test_arithmetic_errors.py  test_arithmetic_relations.py  test_asserts.py  test_atom_processing.py  test_attributed_variables.py  test_autocoder_utils.py  test_backtracking.py  test_builtin_conflict.py  test_builtin_conflict_handling.py  test_builtin_infrastructure.py  test_builtin_registry.py  test_builtins.py  test_call_in_ite.py  test_char_conversion.py  test_char_io.py  test_clause_builtin.py  test_cleanup_bindings.py  test_cli.py  test_comment_syntax.py  test_conditional_compilation.py  test_conformity_tool.py  test_copy_term.py  test_current_predicate.py  test_cut.py  test_dcg.py  test_dcg_variable_goals.py  test_directive_prefix.py  test_directives.py  (+66 more)
tools/: analyze_library_operators.py  check_duplicate_builtins.py  check_operators.py  conformity_test.py  find_builtins.py  (+5 more)
(+95 files in other folders)
