[project]
name = "vibeprolog"
version = "0.1.0"
description = "A complete, widely compatible Prolog implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lark>=1.1.0",
]

[project.scripts]
vibeprolog = "vibeprolog:main"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pylint>=4.0.3",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["vibeprolog*"]
