[project]
name = "ai-workflow-tools"
version = "0.1.0"
description = "CLI helpers for AI-assisted GitHub workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autocoder_utils"]

[tool.hatch.build.targets.sdist]
include = ["autocoder_utils", "README.md"]
