[project]
name = "ai-tools-automation"
version = "0.1.0"
description = "AI-powered GitHub workflow automation tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "change-tracker",
]
